# data-engineering-workflow

./: .dockerignore  .env.example  .gitignore  .pre-commit.yml  Dockerfile  Dockerfile.dbt  Dockerfile.stg  Jenkinsfile  Makefile  README.md  compose.airflow.dev.yml  compose.airflow.init.yml  compose.airflow.prod.yml  compose.airflow.stg.yml  compose.airflow.yml  compose.backup.yml  compose.checkpoint.yml  compose.db-service.yml  compose.dbt.yml  compose.prod.yml  compose.stg.yml  dbt_project.yml  docker-compose.yml  packages.yml  pyproject.toml  setup.py
.archive/: Jenkinsfile  compose.db-service.yml
.devcontainer/: Dockerfile  Dockerfile.airflow  Dockerfile.airflow.dev  requirements.txt
.docs/: sample.md
.github/workflows/: deploy.yml
airflow/config/: README.md  airflow.cfg  config_dag.csv  configs_dev.json  variables.json
airflow/dags/: dag_dbt_test_layers.py  dag_dbt_test_pipeline.py  monitoring.py.py  postgres_connectors.py  test.py  validate.py
airflow/dags/config/: schema.py  (+2 more)
airflow/plugins/: __init__.py
config/: config_dag.csv  config_kgl_data.csv  profiles.yml  variables.json
dags/: dag_dbt_test_layers.py  dag_dbt_test_pipeline.py  dbt_dags.py  general_dbt.py  utils.py  validate.py
dags/config/: dag_config.py
dags/core/: paths.py
dags/settings/: callbacks.py  loaders.py  schema.py
dbt/macros/: override_schema_name.sql
scripts/: export_airflow_db.py  export_airflow_pdb.py  generate_fernet_key.py  generate_jwt_secret.py  generate_webserver_key.py  hello.py  import_airflow_db.py  pyproject.toml
tests/: kaggle.py  test_dag_integrity.py
(+76 files in other folders)
