[project]
name = "data-engineering-workflow"
version = "0.1.0"
description = "Data engineering workflow that focus on connecting data sources, transforming data, and loading it into a data warehouse."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.3",
]

[tool.uv.workspace]
members = ["scripts"]
